--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ async-trait = "0.1"
 chrono = "0.4"
 axum = "0.7"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
 zbus = { version = "4.0", default-features = false, features = ["tokio"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 flate2 = "1.0"
